# finsolve

./: .gitignore  README.md  fjkafkjsaflk  pyproject.toml  requirements.txt  users.db
app/: admin.py  frontend.py  main.py
app/schemas/: model.py
app/services/: add_user.py  admin_upload.py  db.py  init_db.py  llm.py  logger.py  memory_check.py  memory_creation.py
